[package]
name = "esa-nikki"
version = "0.1.0"
authors = ["yoshihara <594134+yoshihara@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
